# nomadcoder-ai-agent-study

./: .gitignore  README.md
claude-agent-sdk/: main.ipynb  pyproject.toml
content-pipelint-agent/: CLAUDE.md  flow_sample.py  main.py  pyproject.toml  seo_crew.py  tools.py  virality_crew.py
customer-support-agent/: .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  README.md  main.py  models.py  output_guardrails.py  tools.py
deep-research-agent/: README.md  main-proxy.py  main.py  pyproject.toml  tools.py
deep-research-agent/.claude/: CLAUDE.md
deployment/: .gitignore  README.md  api.http  main.py
email-refiner-agent/: pyproject.toml
finance_analyst/: CLAUDE.md  README.md  gemini.md  main.py  pyproject.toml  tools.py
finance_analyst/financial_advisor/: agent.py
finance_analyst/financial_advisor/.adk/: session.db
finance_analyst/financial_advisor/sub_agents/: data_analyst.py  finance_analyst.py  news_analyst.py
hello-langgraph/: .env.template  .gitignore  langgraph.json  main.ipynb  main.py  pyproject.toml
job-hunter-agent/: CLAUDE.md  README.md  main.py  pyproject.toml  tools.py
multi-agent-architectures/: .gitignore  agent.py  main.ipynb
my-first-aiagent/: CLAUDE.md  README.md  main.ipynb  pyproject.toml
news-reader-agent/: CLAUDE.md  README.md  main.py  pyproject.toml  tools.py
news-reader-agent/config/: tasks.yaml
travel_advisor_agent/: .gitignore  api_mode.ipynb  code_mode.ipynb  deploy.py  pyproject.toml  session.db
travel_advisor_agent/.gemini/: gemini.md
travel_advisor_agent/travel_advisor/: SeoulTraver.evalset.json  agent.py
tutor-agent/: .gitignore  langgraph.json  main.py
workflow-archtecture/: main.ipynb  pyproject.toml
workflow-testing/: .gitignore  main.py  pyproject.toml  tests.py
youtube-shorts-maker/: .gitignore  (+4 more)
(+102 files in other folders)
