[project]
name = "travel-advisor-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk[eval]>=1.18.0",
    "google-genai>=1.59.0",
    "python-dotenv>=1.2.1",
    "fastapi==0.118.3",
    "sseclient-py>=1.9.0",
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.uv]
override-dependencies = [
    "pydantic==2.10.6"
]
